done up to instruction 4

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -5,23 +5,25 @@
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-
+  <main id="main-doc">
+    <section id="Text_one" class="main-section">
+      <header>Text one</header>
+    </section>
+    <section id="Text_two" class="main-section">
+      <header>Text two</header>
+    </section>
+    <section id="Text_three" class="main-section">
+      <header>Text three</header>
+    </section>
+    <section id="Text_four" class="main-section">
+      <header>Text four</header>
+    </section>
+    <section id="Text_five" class="main-section">
+      <header>Text five</header>
+    </section>
+  </main>
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-
     <script  src="js/index.js"></script>
     <h1>Hello World!, we are software developers!</h1>
   </body>
