--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -8,19 +8,61 @@
   <main id="main-doc">
     <section id="Text_one" class="main-section">
       <header>Text one</header>
+      <p></p>
+      <p></p>
+      <code></code>
+      <li></li>
+      <nav id="navbar">
+        <header>Description one</header>
+        <a href="" class="nav-link">Text one</a>
+      </nav>
     </section>
     <section id="Text_two" class="main-section">
       <header>Text two</header>
+      <p></p>
+      <p></p>
+      <code></code>
+      <li></li>
+      <nav id="navbar">
+        <header>Description one</header>
+        <a href="" class="nav-link">Text two</a>
+      </nav>
     </section>
     <section id="Text_three" class="main-section">
       <header>Text three</header>
+      <p></p>
+      <p></p>
+      <code></code>
+      <li></li>
+      <nav id="navbar">
+        <header>Description one</header>
+        <a href="" class="nav-link">Text three</a>
+      </nav>
     </section>
     <section id="Text_four" class="main-section">
       <header>Text four</header>
+      <p></p>
+      <p></p>
+      <code></code>
+      <li></li>
+      <nav id="navbar">
+        <header>Description one</header>
+        <a href="" class="nav-link">Text four</a>
+      </nav>
     </section>
     <section id="Text_five" class="main-section">
       <header>Text five</header>
+      <p></p>
+      <p></p>
+      <code></code>
+      <li></li>
+      <nav id="navbar">
+        <header>Description one</header>
+        <a href="" class="nav-link">Text five</a>
+      </nav>
     </section>
+    
+    
   </main>
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
