Done upto instruction 14

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -14,7 +14,7 @@
       <li></li>
       <nav id="navbar">
         <header>Description one</header>
-        <a href="" class="nav-link">Text one</a>
+        <a href="#Text_one" class="nav-link">Text one</a>
       </nav>
     </section>
     <section id="Text_two" class="main-section">
@@ -25,7 +25,7 @@
       <li></li>
       <nav id="navbar">
         <header>Description one</header>
-        <a href="" class="nav-link">Text two</a>
+        <a href="#Text_two" class="nav-link">Text two</a>
       </nav>
     </section>
     <section id="Text_three" class="main-section">
@@ -36,7 +36,7 @@
       <li></li>
       <nav id="navbar">
         <header>Description one</header>
-        <a href="" class="nav-link">Text three</a>
+        <a href="#Text_three" class="nav-link">Text three</a>
       </nav>
     </section>
     <section id="Text_four" class="main-section">
@@ -47,7 +47,7 @@
       <li></li>
       <nav id="navbar">
         <header>Description one</header>
-        <a href="" class="nav-link">Text four</a>
+        <a href="#Text_four" class="nav-link">Text four</a>
       </nav>
     </section>
     <section id="Text_five" class="main-section">
@@ -55,10 +55,10 @@
       <p></p>
       <p></p>
       <code></code>
-      <li></li>
+      <li href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide"></li>
       <nav id="navbar">
         <header>Description one</header>
-        <a href="" class="nav-link">Text five</a>
+        <a href="#Text_five" class="nav-link">Text five</a>
       </nav>
     </section>
     
